fixed whitespace and gray background

--- a/src/navigation/SamplesBrowser.css
+++ b/src/navigation/SamplesBrowser.css
@@ -1,5 +1,5 @@
 .sbRoot {
-    background: rgb(134, 134, 134);
+    background: white;
     /* background: blue; */
     /* background-color: blue; */
     display: flex;
@@ -50,8 +50,7 @@
     height: calc(100% - 1rem);
     padding: 0.5rem; */
 
-    background: rgb(150, 253, 132);
-    background: #ffffff;
+    background: white;
     display: flex;
     flex-flow: column;
 }
@@ -71,7 +70,6 @@
     padding-right: 0px;
 
     font-family: 'Titillium Web';
-    background: rgb(149, 149, 149);
     background: #323232;
     color: white;
     display: flex;
